<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="363dp"
        android:layout_height="443dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/c"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/delete_background"
                android:paddingTop="13dp"
                android:text="@string/clear"
                android:textAlignment="center"
                android:textSize="34sp"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/delete_background"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_baseline_cancel_presentation_24" />

            <TextView
                android:id="@+id/per"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/operations_background"
                android:paddingTop="12dp"
                android:text="@string/percent"
                android:textAlignment="center"
                android:textSize="38sp" />

            <TextView
                android:id="@+id/divide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/operations_background"
                android:paddingTop="9dp"
                android:text="@string/divide"
                android:textAlignment="center"
                android:textColor="#3F4D9E"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/numbers_background"
                android:paddingTop="13dp"
                android:text="@string/seven"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/numbers_background"
                android:paddingTop="13dp"
                android:text="@string/eight"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/numbers_background"
                android:paddingTop="13dp"
                android:text="@string/nine"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/multiply"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/operations_background"
                android:paddingTop="7dp"
                android:text="@string/multiply"
                android:textAlignment="center"
                android:textColor="#424D9E"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/four"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/numbers_background"
                android:paddingTop="13dp"
                android:text="@string/four"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/five"
                android:layout_width="11dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/numbers_background"
                android:paddingTop="13dp"
                android:text="@string/five"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/six"
                android:layout_width="7dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/numbers_background"
                android:paddingTop="13dp"
                android:text="@string/six"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/operations_background"
                android:paddingTop="7dp"
                android:text="@string/subtract"
                android:textAlignment="center"
                android:textColor="#3F4D9E"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/numbers_background"
                android:paddingTop="13dp"
                android:text="@string/one"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/numbers_background"
                android:paddingTop="13dp"
                android:text="@string/two"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/numbers_background"
                android:paddingTop="13dp"
                android:text="@string/three"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/operations_background"
                android:paddingTop="7dp"
                android:text="@string/add"
                android:textAlignment="center"
                android:textColor="#3F4D9E"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/zeroes"
                android:layout_width="18dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/numbers_background"
                android:paddingTop="13dp"
                android:text="@string/zeroes"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/numbers_background"
                android:paddingTop="13dp"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/point"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/numbers_background"
                android:paddingTop="13dp"
                android:text="@string/point"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/equals"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/operations_background"
                android:paddingTop="7dp"
                android:text="@string/equals"
                android:textAlignment="center"
                android:textColor="#3F4D9E"
                android:textSize="40sp" />
        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/area"
        android:layout_width="361dp"
        android:layout_height="80dp"
        android:layout_marginStart="2dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="viewEnd"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.615" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:layout_marginEnd="2dp"
        android:maxLength="186"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>